fix: prevent code lines to wrap

--- a/src/shiki.css
+++ b/src/shiki.css
@@ -49,6 +49,7 @@ pre.shiki div.highlight {
 }
 pre.shiki div.line {
 	min-height: 1rem;
+	display: flex;
 }
 
 /** Don't show the language identifiers */
